# Robotics-Projects

./: README.md
final_project/: ReadMe.md
final_project/follower/: CMakeLists.txt  package.xml
final_project/follower/include/: dwa_planner.h
final_project/follower/src/: dwa_planner.cpp  follower.cpp  run_follower.cpp
final_project/target_finder/: CMakeLists.txt  readme.txt
final_project/target_finder/launch/: detect_color.launch  target_detect.launch
final_project/target_finder/src/: detect_color.cpp  target_finder.cpp
final_project/turtlebot/: CMakeLists.txt  package.xml  readme.txt
final_project/turtlebot/config/: object1_poses.txt  object2_poses.txt  person_poses.txt
final_project/turtlebot/include/: geometric.h
final_project/turtlebot/launch/: spawn_robot.launch
final_project/turtlebot/models/simple_kb/: model.config  model.sdf
final_project/turtlebot/src/: geometric.cpp  movements.cpp
final_project/turtlebot/urdf/: object.urdf  person.urdf  turtlebot.urdf
project_1/: CMakeLists.txt  ReadMe.md  package.xml
project_1/config/: config.yaml
project_1/inc/: Controller.cpp  CubeSpawner.cpp
project_1/inc/project_1/: Controller.hpp  CubeSpawner.hpp
project_1/launch/: robot_gazebo.launch
project_1/src/: main.cpp
project_1/urdf/: cube.urdf  robot.urdf
project_1/worlds/: r_world.world
project_2/: CMakeLists.txt  ReadMe.md
project_2/include/: kinematics.h
project_2/launch/: spawn_robot.launch
project_2/src/: kinematics.cpp  random_kinematics.cpp  show_workspace.cpp  touch_spheres.cpp
project_2/urdf/: rrrbot.urdf
project_3/: CMakeLists.txt  ReadMe.md  package.xml
project_3/data/: J_v.txt  J_w.txt  delta_thetas.txt  inv_vel.txt  jacobian.txt
project_3/include/: matplotlibcpp.h  plotter.h  velocity_kinematics.h
project_3/launch/: spawn_robot.launch
project_3/src/: move_robot.cpp  plot.py  plotVelocities.cpp  plotter.cpp  velocity_kinematics.cpp
project_3/urdf/: rrrbot.urdf
project_4/: CMakeLists.txt  ReadMe.md
project_4/config/: path.txt  plot.py  robot_task.txt
project_4/data/: locations.txt
project_4/include/: turtlebot_controller.h
project_4/launch/: spawn_robot.launch
project_4/src/: APF_planning.cpp  calculate_location.cpp  turtlebot_controller.cpp
